--- a/financeCSS/styles.css
+++ b/financeCSS/styles.css
@@ -1,43 +1,51 @@
+span[class~="sr-only"]{
+    border: 0 !important;
+    clip: rect(1px,1px,1px,1px) !important;
+    clip-path: inset(50%) !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden !important;
+    white-space: nowrap !important;
+    position:absolute !important;
+    padding:0 !important;
+    margin:-1px !important;
+}
+
 html{
     box-sizing: border-box;
 }
+
 body{
     font-family: sans-serif;
     color: #0a0a23;
 }
-span[class~="sr-only"]{
-    border: 0;
-    clip: rect(1px,1px,1px,1px);
-    clip-path: inset(50%);
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    white-space: nowrap;
-    position:absolute;
-    padding:0;
-    margin:-1px;
-}
+
 h1{
     max-width: 37.25rem;
     margin: 0 auto;
     padding: 1.5rem 1.25rem;
 }
+
 h1 .flex{
     display: flex;
     flex-direction: column-reverse;
     gap: 1rem;
 }
+
 h1 .flex span:first-of-type{/*Controlar mi primer elemento span de mi contenedor flex*/
     font-size:0.7em;
 }
+
 h1 .flex span:last-of-type{/*Controlar mi ultimo elemento span de mi contenedor flex*/
     font-size:1.2em;
 }
+
 section{
     max-width:40rem;/*Damos adaptibilidad*/
     margin:0 auto;/*centramos*/
     border:2px solid #d0d0d5;
 }
+
 #years{
     display: flex;
     justify-content: flex-end;
@@ -49,8 +57,102 @@ section{
     padding: 0.5rem calc(1.25rem + 2px) 0.5rem 0;
     z-index: 999;
 }
+
 #years span[class]{
     font-weight: bold; /*grosor de la letra*/
     width: 4.5rem;
     text-align: right;
+}
+
+.table-wrap{
+    padding: 0 0.75rem 1.5rem 0.75rem;
+}
+/*Todas los Span que no sean de esta clase, pero cuando tenemos impotant no es necesario sobreescribir el codigo*/
+/*span:not(.sr-only){
+    font-weight:normal;}*/
+/*span{
+    font-weight: normal;
+}*/
+
+table{
+    border-collapse: collapse;
+    border:0;
+    width: 100%;
+    position: relative;
+    margin-top: 3rem;
+}
+
+table caption{
+    color:#35af5e;
+    font-size:1.3em;
+    font-weight: normal;
+    position: absolute;
+    top: -2.25rem;
+    left: 0.5rem;
+}
+
+tbody td{
+    max-width:4rem;
+    min-width:4rem;
+    width:100vw;
+}
+
+tbody th{
+    width: calc(100% - 12rem);
+}
+
+tr[class="total"]{
+    border-bottom: 4px double #0a230c;
+    font-weight: bold;
+}
+
+tr[class="total"] th{
+    text-align: left;
+    padding: 0.5rem 0 0.25rem 0.5rem;
+}
+
+tr.total td{/*tr.total se refiere a los tr con clase total y
+     los tr .total se refiere a los elementos con la clase total dentro del elemento tr*/
+    text-align: right;
+    padding:0 0.25rem;
+}
+
+tr.total td:nth-of-type(3) {
+    padding-right: 0.5rem;
+}
+
+tr.total:hover{
+    background:#99ffbe;
+}
+
+td[class="current"]{
+    font-style: italic;
+}
+
+tr[class="data"]{
+  background:linear-gradient(to bottom, #dfdfe2 1.845rem, white 1.845rem);
+}
+
+tr.data th{
+    text-align:left;
+    padding-top:0.3rem;
+    padding-left:0.5rem;
+}
+
+tr.data th .description{
+    display:block;
+    font-style:italic;
+    font-weight:normal;
+    padding:1rem 0 0.75rem;
+    margin-right:-13.5rem;
+}
+
+tr.data td{
+    vertical-align: top;
+    text-align: right;
+    padding: 0.3rem 0.25rem 0;
+}
+
+tr.data td:last-of-type{
+    padding-right:0.5rem;
 }
